# LHP

./: README.md  test.hs  test2.hs
words/: LICENSE  words.cabal
words/app/: Main.hs
words/src/: Data.hs  Lib.hs
words/test/: Spec.hs
