name:           words
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/TheGhostHuCodes/words#readme>
homepage:       https://github.com/TheGhostHuCodes/words#readme
bug-reports:    https://github.com/TheGhostHuCodes/words/issues
author:         Yung-Jin (Joey) Hu
maintainer:     yungjinhu@gmail.com
copyright:      BSD
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/TheGhostHuCodes/words

library
  exposed-modules:
      Lib
    , Data
  other-modules:
      Paths_words
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
  default-language: Haskell2010

executable words
  main-is: Main.hs
  other-modules:
      Paths_words
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:
      base >=4.7 && <5
    , words
  default-language: Haskell2010

test-suite words-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_words
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , words
    , hspec
  default-language: Haskell2010
